# embedded_system

./: Cargo.toml  build.rs  sdkconfig.defaults
src/: main.rs
src/config/: env.rs
src/discord/: bot.rs  commands.rs  fetch.rs  logic.rs  mod.rs  models.rs  send.rs  slash_commands.rs
src/tasks/: audio_task.rs  discord_task.rs  display_task.rs  mod.rs
src/wifi/: mod.rs  personal.rs  wifi.rs  wifi_manager.rs
