[package]
name = "esp_bot"
version = "0.1.0"
authors = ["Duk3lo <jhosue10avecillas@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "esp_bot"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["native"] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
embedded-svc = "0.29.0"
esp-idf-sys = { version = "0.37.2" }
dotenvy = "0.15"
ssd1306 = "0.10.0"
embedded-graphics = "0.8.1"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"

[build-dependencies]
embuild = "0.33"
dotenvy = "0.15"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "1.3.0" }